--- a/Caronae/CaronaeJoinRequestCell.xib
+++ b/Caronae/CaronaeJoinRequestCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="90" id="KGk-i7-Jjw" customClass="CaronaeRideRequestCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="90" id="KGk-i7-Jjw" customClass="CaronaeJoinRequestCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -94,6 +94,11 @@
                 </constraints>
             </tableViewCellContentView>
             <animations/>
+            <connections>
+                <outlet property="userCourse" destination="3bo-c8-Br5" id="gaG-Hf-1yn"/>
+                <outlet property="userName" destination="0Nl-H4-CEK" id="JdR-Ak-MN0"/>
+                <outlet property="userPhoto" destination="1RG-CV-C0R" id="DGe-o3-Pon"/>
+            </connections>
             <point key="canvasLocation" x="512" y="459"/>
         </tableViewCell>
     </objects>
